<resources>
    <string name="app_name">Food App</string>
    <string name="next">Next</string>
    <string name="welcome">Welcome to Food-E</string>
    <string name="local">local</string>
    <string name="food">food</string>
    <string name="awesome">Awesome</string>
    <string name="get">Get</string>
    <string name="started">started</string>
    <string name="info_get_started">Get started and enjoy the awesome local food right at your home.</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="phone">Phone</string>
    <string name="password">Password</string>
    <string name="have_an_account">Already have an account?</string>
    <string name="example_phone">+7(981)878–81–01</string>
    <string name="example_email">johndoe@email.com</string>
    <string name="example_name">Osvin</string>
    <string name="no_account">Don’t have an account?</string>
    <string name="forgot_password">Forgot Password</string>
    <string name="info_forgot_password">We’ll send a password reset link to your email.</string>
    <string name="open_email_app">Open email App</string>
    <string name="info_sent_an_email">We’ve sent you an email at</string>
    <string name="resend">Resend</string>
    <string name="not_receive_the_email">Did not receive the email yet?</string>
    <string name="example_time">00:38</string>
    <string name="info_sent_an_email2">for verification. Check your email for the verification link.</string>
    <string name="reset_password">Reset password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="new_password">New password</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="please_enter_name">Please enter name</string>
    <string name="please_enter_email">Please enter email</string>
    <string name="please_enter_phone">Please enter phone</string>
    <string name="please_enter_password">Please enter password</string>
    <string name="hello">Hello,</string>
    <string name="example_location">Home</string>
    <string name="example_stock">GET 50% AS A Joining Bonus</string>
    <string name="use_code_on_checkout">use code on checkout</string>
    <string name="example_code">NEW50</string>
    <string name="recommended_for_you">Recommended for you</string>
    <string name="example_name_food">Egg Salad</string>
    <string name="example_price">$5.00</string>
    <string name="restaurants">Categories</string>
    <string name="popular_in_your_area">POPULAR IN YOUR AREA</string>
    <string name="email_sent">Email sent</string>
    <string name="incorrect_data">Incorrect data</string>
    <string name="successful_registration">Successful registration</string>
    <string name="successful_login">Success sign in. Hello, </string>
    <string name="data_saved">Data saved</string>
    <string name="example_name_restaurant">The Nautilus</string>
    <string name="description">DESCRIPTION</string>
    <string name="info_food">Non odit iusto delectus maxime sit placeat voluptatum dolorem. Dolores quos rerum iusto. Beatae totam ab veritatis aliquid tenetur qui ut. Quia ut dolorum enim et. Exercitationem occaecati eum est ex qui harum aliquam.</string>
    <string name="quantity">QUANTITY</string>
    <string name="example_count">1</string>
    <string name="sub_total">SUB TOTAL</string>
    <string name="add_to_basket">ADD TO BASKET</string>
    <string name="basket">basket</string>
    <string name="total">total</string>
    <string name="proceed_to_checkout">PROCEED TO CHECKOUT</string>
    <string name="liked">LIKED</string>
    <string name="please_wait">Please wait...</string>
    <string name="verify_email">"Please verify your email"</string>
    <string name="user_verifed">"User verified"</string>
    <string name="category">Category</string>


</resources>