<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:id="@+id/food_logo2"
        android:layout_width="40dp"
        android:layout_height="22dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="50dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/food_black_logo"/>

    <TextView
        android:id="@+id/t_get"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="120dp"
        style="@style/HeardingText"
        android:textColor="@color/primary_light"
        android:text="@string/get"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t_started"
        style="@style/HeardingText"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="120dp"
        android:layout_marginStart="8dp"
        android:text="@string/started"
        android:textColor="@color/dark"
        app:layout_constraintStart_toEndOf="@+id/t_get"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/t_info"
        style="@style/BodyText"
        android:textColor="@color/dark"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="175dp"
        android:text="@string/info_get_started"
        android:textSize="18sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_login_gs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="652dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        style="@style/DefultSolid"
        android:text="@string/login"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/b_register_gs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        style="@style/DefultOutline"
        android:layout_marginTop="722dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:text="@string/register"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>